@@ -19,6 +19,7 @@ import org.elasticsearch.action.delete.TransportDeleteAction;
 import org.elasticsearch.action.index.TransportIndexAction;
 import org.elasticsearch.action.search.SearchRequest;
 import org.elasticsearch.action.search.TransportSearchAction;
+import org.elasticsearch.action.support.IndexComponentSelector;
 import org.elasticsearch.action.support.PlainActionFuture;
 import org.elasticsearch.action.support.SubscribableListener;
 import org.elasticsearch.client.internal.Client;
@@ -1414,6 +1415,82 @@ public class RBACEngineTests extends ESTestCase {
         }
     }
 
+    public void testBuildUserPrivilegeResponseCombinesIndexPrivileges() {
+        final BytesArray query = new BytesArray("""
+            {"term":{"public":true}}""");
+        final Role role = Role.builder(RESTRICTED_INDICES, "test", "role")
+            .add(IndexPrivilegeTests.resolvePrivilegeAndAssertSingleton(Sets.newHashSet("read", "write")), "index-1")
+            .add(IndexPrivilege.ALL, "index-2")
+            .add(
+                new FieldPermissions(new FieldPermissionsDefinition(new String[] { "public.*" }, new String[0])),
+                Collections.singleton(query),
+                IndexPrivilege.MANAGE,
+                true,
+                "index-1",
+                "index-2"
+            )
+            .add(
+                new FieldPermissions(new FieldPermissionsDefinition(new String[] { "public.*" }, new String[0])),
+                Collections.singleton(query),
+                IndexPrivilegeTests.resolvePrivilegeAndAssertSingleton(Sets.newHashSet("read", "write")),
+                true,
+                "index-2",
+                "index-1"
+            )
+            .add(
+                new FieldPermissions(new FieldPermissionsDefinition(new String[] { "public.*" }, new String[0])),
+                Collections.singleton(query),
+                IndexPrivilegeTests.resolvePrivilegeAndAssertSingleton(Sets.newHashSet("read_failure_store", "manage_failure_store")),
+                true,
+                "index-2",
+                "index-1"
+            )
+            .add(
+                FieldPermissions.DEFAULT,
+                null,
+                IndexPrivilegeTests.resolvePrivilegeAndAssertSingleton(Sets.newHashSet("read_failure_store")),
+                false,
+                "index-2",
+                "index-1"
+            )
+            .build();
+
+        final GetUserPrivilegesResponse response = RBACEngine.buildUserPrivilegesResponseObject(role);
+
+        final GetUserPrivilegesResponse.Indices index1 = findIndexPrivilege(response.getIndexPrivileges(), Set.of("index-1"), false);
+        assertThat(index1.getIndices(), containsInAnyOrder("index-1"));
+        assertThat(index1.getPrivileges(), containsInAnyOrder("read", "write"));
+        assertThat(index1.getFieldSecurity(), emptyIterable());
+        assertThat(index1.getQueries(), emptyIterable());
+
+        final GetUserPrivilegesResponse.Indices index2 = findIndexPrivilege(response.getIndexPrivileges(), Set.of("index-2"), false);
+        assertThat(index2.getIndices(), containsInAnyOrder("index-2"));
+        assertThat(index2.getPrivileges(), containsInAnyOrder("all"));
+        assertThat(index2.getFieldSecurity(), emptyIterable());
+        assertThat(index2.getQueries(), emptyIterable());
+
+        Set<GetUserPrivilegesResponse.Indices> actualIndexPrivileges = response.getIndexPrivileges();
+        assertThat(actualIndexPrivileges, iterableWithSize(4));
+        final GetUserPrivilegesResponse.Indices index1And2 = findIndexPrivilege(actualIndexPrivileges, Set.of("index-1", "index-2"), true);
+        assertThat(index1And2.getIndices(), containsInAnyOrder("index-1", "index-2"));
+        assertThat(index1And2.getPrivileges(), containsInAnyOrder("read", "write", "read_failure_store", "manage_failure_store", "manage"));
+        assertThat(
+            index1And2.getFieldSecurity(),
+            containsInAnyOrder(new FieldPermissionsDefinition.FieldGrantExcludeGroup(new String[] { "public.*" }, new String[0]))
+        );
+        assertThat(index1And2.getQueries(), containsInAnyOrder(query));
+
+        final GetUserPrivilegesResponse.Indices index1And2NotRestricted = findIndexPrivilege(
+            actualIndexPrivileges,
+            Set.of("index-1", "index-2"),
+            false
+        );
+        assertThat(index1And2NotRestricted.getIndices(), containsInAnyOrder("index-1", "index-2"));
+        assertThat(index1And2NotRestricted.getPrivileges(), containsInAnyOrder("read_failure_store"));
+        assertThat(index1And2NotRestricted.getFieldSecurity(), emptyIterable());
+        assertThat(index1And2NotRestricted.getQueries(), emptyIterable());
+    }
+
     public void testBackingIndicesAreIncludedForAuthorizedDataStreams() {
         final String dataStreamName = "my_data_stream";
         User user = new User(randomAlphaOfLengthBetween(4, 12));
@@ -1444,14 +1521,14 @@ public class RBACEngineTests extends ESTestCase {
             lookup,
             () -> ignore -> {}
         );
-        assertThat(authorizedIndices.all().get(), hasItem(dataStreamName));
-        assertThat(authorizedIndices.check(dataStreamName), is(true));
+        assertThat(authorizedIndices.all(IndexComponentSelector.DATA), hasItem(dataStreamName));
+        assertThat(authorizedIndices.check(dataStreamName, IndexComponentSelector.DATA), is(true));
         assertThat(
-            authorizedIndices.all().get(),
-            hasItems(backingIndices.stream().map(im -> im.getIndex().getName()).collect(Collectors.toList()).toArray(Strings.EMPTY_ARRAY))
+            authorizedIndices.all(IndexComponentSelector.DATA),
+            hasItems(backingIndices.stream().map(im -> im.getIndex().getName()).toList().toArray(Strings.EMPTY_ARRAY))
         );
         for (String index : backingIndices.stream().map(im -> im.getIndex().getName()).toList()) {
-            assertThat(authorizedIndices.check(index), is(true));
+            assertThat(authorizedIndices.check(index, IndexComponentSelector.DATA), is(true));
         }
     }
 
@@ -1487,7 +1564,8 @@ public class RBACEngineTests extends ESTestCase {
             lookup,
             () -> ignore -> {}
         );
-        assertThat(authorizedIndices.all().get().isEmpty(), is(true));
+        assertThat(authorizedIndices.all(IndexComponentSelector.DATA).isEmpty(), is(true));
+        assertThat(authorizedIndices.all(IndexComponentSelector.FAILURES).isEmpty(), is(true));
     }
 
     public void testNoInfiniteRecursionForRBACAuthorizationInfoHashCode() {
@@ -1621,10 +1699,10 @@ public class RBACEngineTests extends ESTestCase {
             Set<IndexPrivilege> splitBySelector = IndexPrivilege.resolveBySelectorAccess(
                 Set.copyOf(randomSubsetOf(randomIntBetween(1, 4), IndexPrivilege.names()))
             );
-            // If we end up with failure and data access, we will split and end up with extra groups. Need to account for this for the
-            // final assertion
-            if (splitBySelector.size() == 2) {
-                extraGroups++;
+            // If we end up with failure and data access (or failure, data and failure and data access),
+            // we will split and end up with extra groups. Need to account for this for the final assertion
+            if (splitBySelector.size() >= 2) {
+                extraGroups += splitBySelector.size() - 1;
             }
             for (var privilege : splitBySelector) {
                 remoteIndicesBuilder.addGroup(
@@ -2013,6 +2091,21 @@ public class RBACEngineTests extends ESTestCase {
             null,
             parentAuthorization
         );
+    }
+
+    private GetUserPrivilegesResponse.Indices findIndexPrivilege(
+        Set<GetUserPrivilegesResponse.Indices> indices,
+        Set<String> indexNames,
+        boolean allowRestrictedIndices
+    ) {
+        return indices.stream()
+            .filter(
+                i -> i.allowRestrictedIndices() == allowRestrictedIndices
+                    && i.getIndices().containsAll(indexNames)
+                    && indexNames.containsAll(i.getIndices())
+            )
+            .findFirst()
+            .get();
     }
 
     private GetUserPrivilegesResponse.Indices findIndexPrivilege(Set<GetUserPrivilegesResponse.Indices> indices, String name) {
